Update bin/control.sh and bin/include/jvmdefaults.sh